<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="com.demiurgosoft.lightquiz.PlayGame">

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:elegantTextHeight="false"
        android:onClick="startGame"
        android:text="@string/start_button"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/highscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/highscore"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp" />

    <Button
        android:id="@+id/other_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/space2"
        android:layout_centerHorizontal="true"
        android:onClick="startGame"
        android:text="@string/other_games_button"
        android:textSize="20sp" />

    <Space
        android:id="@+id/space2"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignEnd="@+id/highscore"
        android:layout_alignLeft="@+id/other_game_button"
        android:layout_alignRight="@+id/highscore"
        android:layout_alignStart="@+id/other_game_button"
        android:layout_below="@+id/start_button" />

</RelativeLayout>