<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".demiurgosoft.lightquiz.PlayGame">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:baselineAligned="false"
        android:minWidth="100dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/answer_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/answer_2"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:onClick="answerClicked"
            android:text="@string/answer_1" />

        <Button
            android:id="@+id/answer_2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/answer_3"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:onClick="answerClicked"
            android:text="@string/answer_2" />

        <Button
            android:id="@+id/answer_3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/answer_4"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:onClick="answerClicked"
            android:text="@string/answer_3" />

        <Button
            android:id="@+id/answer_4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:onClick="answerClicked"
            android:text="@string/answer_4" />

    </LinearLayout>

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="false"
        android:layout_below="@+id/space"
        android:text="@string/question"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/question_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/exit_button"
        android:layout_toStartOf="@+id/exit_button"
        android:text="@string/question_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40dp" />

    <Button
        android:id="@+id/exit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="right"
        android:onClick="exitButtonClicked"
        android:text="@string/exit_button" />

    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_below="@+id/question_title"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/correct_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@mipmap/correct_answer"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/wrong_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@mipmap/wrong_answer"
        android:visibility="invisible" />

</RelativeLayout>

